crates/oxc_react_compiler/tests/snapshots/error.unsupported-implicit-arguments-var-captured-by-arrow.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/error.unsupported-implicit-arguments-var-captured-by-arrow.js
---
Diagnostics:

OxcDiagnostic { inner: OxcDiagnosticInner { message: "(BuildHIR::lowerStatement) Handle var kinds in VariableDeclaration", labels: [LabeledSpan { label: None, span: Span { start: 41, end: 55 }, primary: true }], help: Some("Rewrite the highlighted code using syntax supported by React Compiler"), note: Some("React Compiler skipped optimizing this component or hook"), severity: Advice, code: OxcCode { scope: Some("react-compiler"), number: Some("Todo") }, url: Some("https://react.dev/reference/eslint-plugin-react-hooks/lints/unsupported-syntax") } }
OxcDiagnostic { inner: OxcDiagnosticInner { message: "Implicit 'arguments' is not supported", labels: [LabeledSpan { label: Some("implicit `arguments` object referenced here"), span: Span { start: 77, end: 86 }, primary: true }], help: Some("React Compiler does not support compiling functions that reference the implicit arguments object"), note: Some("React Compiler skipped optimizing this component or hook"), severity: Warning, code: OxcCode { scope: Some("react-compiler"), number: Some("UnsupportedSyntax") }, url: Some("https://react.dev/reference/eslint-plugin-react-hooks/lints/unsupported-syntax") } }

No changes.
